--- a/shadercam-example/build.gradle
+++ b/shadercam-example/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.androidexperiments.shadercam.example"
@@ -10,6 +10,11 @@ android {
         targetSdkVersion 23
         versionCode 3
         versionName "1.2"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
     }
     buildTypes {
         release {
