--- a/shadercam-example/build.gradle
+++ b/shadercam-example/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 23
@@ -32,5 +33,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':shadercam')
     compile 'com.android.support:appcompat-v7:23.2.0' //for theming
-    compile 'com.jakewharton:butterknife:6.1.0' //dependency injection
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version" //dependency injection
+}
+repositories {
+    mavenCentral()
 }
